feat: add the browser support workspace
